--- a/biblioteca/src/app/home/book-page/book-page.component.html
+++ b/biblioteca/src/app/home/book-page/book-page.component.html
@@ -24,7 +24,7 @@
   </mat-card>
   </main>
 
-  <mat-expansion-panel *ngIf="book?.status=='ENABLE'&&userRole==='CLIENT'" hideToggle>
+  <mat-expansion-panel *ngIf="book?.status=='ENABLE' && user.isCLIENT(userData)" hideToggle>
     <mat-expansion-panel-header>
       <mat-panel-title>
         I want to borrow this book
@@ -42,13 +42,13 @@
       <span class="deposit">€{{book?.deposit}}</span>
       <span class="balance" matTooltip="Click to recharge" (click)="openRechargePage()">Account balance of €{{wallet}}</span>
       <p *ngIf="date.value" class="clause">You need to return the book by {{date.value}}  23:59:59 in order to avoid the deduction of additional fees</p>
-      <mat-checkbox *ngIf="date.value" [(ngModel)]="isOk">I have been advised of the rules regarding return time and deduction of additional charges.</mat-checkbox>
+      <mat-checkbox *ngIf="date.value" [(ngModel)]="confirm">I have been advised of the rules regarding return time and deduction of additional charges.</mat-checkbox>
       <br>
       <button mat-flat-button (click)="borrow(date.value)" class="btn">BORROW</button>
     </mat-card>
 
   </mat-expansion-panel>
-    <mat-expansion-panel *ngIf="userRole !== 'CLIENT' && userRole!='' && !hiddenEdit" [expanded]= "step === 1" (opened)="step=1" (closed)="step=0" hideToggle>
+    <mat-expansion-panel *ngIf="user.isAdmin(userData) && !hiddenEdit" [expanded]= "step === 1" (opened)="step=1" (closed)="step=0" hideToggle>
       <mat-expansion-panel-header>
         <mat-panel-title>
           Modify book data
@@ -137,8 +137,8 @@
       <button mat-flat-button (click)="update()" class="update">UPDATE</button>
     </mat-expansion-panel>
     <mat-card-content class="end">
-      <button mat-flat-button *ngIf="!isWishBook&&userRole==='CLIENT'" (click)="addWishList()" > ❤ </button>
-      <button mat-flat-button *ngIf="isWishBook&&userRole==='CLIENT'" (click)="removeWishList()"> Remove</button>
+      <button mat-flat-button *ngIf="!isWishBook&&user.isCLIENT(userData)" (click)="addWishList()" > ❤ </button>
+      <button mat-flat-button *ngIf="isWishBook&&user.isCLIENT(userData)" (click)="removeWishList()"> Remove</button>
       <button mat-dialog-close mat-raised-button >Close</button>
     </mat-card-content>
 
