--- a/biblioteca/src/app/home/borrow/borrow.component.html
+++ b/biblioteca/src/app/home/borrow/borrow.component.html
@@ -1,158 +1,159 @@
 <main>
-<mat-card *ngIf="userTelephone!=''">
-  <mat-tab-group>
-
-    <mat-tab label="Return box" *ngIf="userRole=='ADMINISTRATOR'||userRole=='ROOT'">
-      <mat-card-title>
-        <h1 class="title">Return box</h1>
-        <button mat-flat-button (click)="getAllBorrowData()">Refresh</button>
-      </mat-card-title>
-      <mat-form-field class="example-full-width">
-        <mat-label>Search</mat-label>
-        <input matInput (keyup)="applyReturnBoxFilter($event)" placeholder="bookName,bookID,telephone,reference,time">
-      </mat-form-field>
-
-      <table mat-table #returnBoxSort="matSort" [dataSource]="returnBoxDataSource" class="mat-elevation-z8" matSort>
-        <ng-container matColumnDef="reference" >
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Reference </th>
-          <td mat-cell *matCellDef="let element"  > {{element.reference}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="bookID">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Book </th>
-          <td mat-cell *matCellDef="let element" > {{element.book.name}} [ID:{{element.book.bookID}}] </td>
-        </ng-container>
-
-        <ng-container matColumnDef="returnStatus">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-          <td mat-cell *matCellDef="let element"  > {{element.returnStatus}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="telephone">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> User </th>
-          <td mat-cell *matCellDef="let element"  > {{element.user.telephone}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="isReturn">
-          <th mat-header-cell *matHeaderCellDef> Status of return </th>
-          <td mat-cell *matCellDef="let element" >
-            <button mat-icon-button *ngIf="element.returnStatus=='WAITING_FOR_VERIFICATION'" (click)="openFeedbackPage(element.reference)" ><mat-icon>check</mat-icon></button>
-            <button mat-icon-button *ngIf="element.returnStatus=='WAITING_FOR_VERIFICATION'" (click)="bookNoReturn(element.reference)" ><mat-icon>close</mat-icon></button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="view">
-          <th mat-header-cell *matHeaderCellDef> View </th>
-          <td mat-cell *matCellDef="let element"> <button mat-icon-button (click)="openReturnPage(element.reference)"><mat-icon> visibility</mat-icon> </button></td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef=" returnBoxLow "></tr>
-        <tr mat-row *matRowDef="let row; columns: returnBoxLow;"></tr>
-      </table>
-      <mat-paginator #returnBoxPaginator [pageSizeOptions]="[5, 10, 25, 50]" ></mat-paginator>
-    </mat-tab>
-
-    <mat-tab label="Returned list">
-      <mat-card-title>
-        <h1 class="title">Returned list</h1> <button mat-flat-button (click)="getAllBorrowData()">Refresh</button>
-      </mat-card-title>
-
-      <mat-form-field class="example-full-width">
-        <mat-label>Search</mat-label>
-        <input matInput (keyup)="applyRestitutionFilter($event)" placeholder="bookName,bookID,telephone,reference,time,status">
-      </mat-form-field>
-      <table mat-table #restitutionSort="matSort" [dataSource]="restitutionDataSource" class="mat-elevation-z8" matSort>
-        <ng-container matColumnDef="reference">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Reference </th>
-          <td mat-cell *matCellDef="let element"  [class]="{'red-text':isOverdue(element.limitTime,element.restitutionTime)}" > {{element.reference}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="bookID">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Book </th>
-          <td mat-cell *matCellDef="let element" [class]="{'red-text':isOverdue(element.limitTime,element.restitutionTime)}"> {{element.book.name}} [ID:{{element.book.bookID}}] </td>
-        </ng-container>
-
-        <ng-container matColumnDef="returnStatus">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> ReturnStatus </th>
-          <td mat-cell *matCellDef="let element"  [class]="{'red-text':isOverdue(element.limitTime,element.restitutionTime)}"> {{element.returnStatus}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef> Status of return </th>
-          <td mat-cell *matCellDef="let element"  [class]="{'red-text':isOverdue(element.limitTime,element.restitutionTime)}"> {{status2(element.limitTime,element.restitutionTime)}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="telephone">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> User </th>
-          <td mat-cell *matCellDef="let element" [class]="{'red-text':isOverdue(element.limitTime,element.restitutionTime)}" > {{element.user.telephone}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="view">
-          <th mat-header-cell *matHeaderCellDef> View </th>
-          <td mat-cell *matCellDef="let element"> <button mat-icon-button (click)="openReturnPage(element.reference)"><mat-icon> visibility</mat-icon> </button></td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef=" returnLow "></tr>
-        <tr mat-row *matRowDef="let row; columns: returnLow;"></tr>
-      </table>
-      <mat-paginator #restitutionPaginator [pageSizeOptions]="[5, 10, 25, 50]" ></mat-paginator>
-    </mat-tab>
-    <mat-tab label="Unreturned list">
-      <mat-card-title>
-        <h1 class="title">Lending list</h1>
-        <button mat-flat-button (click)="getAllBorrowData();all=false">Refresh</button>
-      </mat-card-title>
+  <mat-card *ngIf="user.isNoNull(userData)">
+    <mat-tab-group>
+      <mat-tab *ngIf="user.isAdmin(userData)" label="Return box">
+        <mat-card-title>
+          <h1 class="title">Return box</h1>
+          <button (click)="getAllBorrowData()" mat-flat-button>Refresh</button>
+        </mat-card-title>
         <mat-form-field class="example-full-width">
           <mat-label>Search</mat-label>
-          <input matInput (keyup)="applyLendingFilter($event)" placeholder="bookName,bookID,telephone,reference,time">
+          <input (keyup)="applyReturnBoxFilter($event)" matInput placeholder="bookName,bookID,telephone,reference,time">
         </mat-form-field>
-      <br>
-        <button mat-flat-button (click)="applyLendingAllOrNoReturnFilter('false'); all=true" *ngIf="!all">Only Show no Return</button>
-        <button mat-flat-button (click)="getAllBorrowData(); all=false" *ngIf="all">Show All</button>
-        <button *ngIf="userRole=='ADMINISTRATOR'||userRole=='ROOT'" mat-flat-button (click)="readUserByExtensionBeyond30Days(); all=true" >Show Beyond 30 Days no Return</button>
-        <button *ngIf="userRole=='ADMINISTRATOR'||userRole=='ROOT'" mat-flat-button (click)="sendReminderEmail('send_email_to_user_by_approaching_date'); all=true" >Send reminder email</button>
-        <button *ngIf="userRole=='ADMINISTRATOR'||userRole=='ROOT'" mat-flat-button (click)="sendReminderEmail('send_email_to_user_by_order_overdue'); all=true" >Send order overdue email</button>
-        <button *ngIf="userRole=='ADMINISTRATOR'||userRole=='ROOT'" mat-flat-button (click)="sendReminderEmail('ban_user_by_overdue_max_30day'); all=true" >Send order beyond 30 Days no Return email</button>
 
-      <table mat-table #lendingSort="matSort" [dataSource]="lendingDataSource" class="table-unreturned" matSort>
-        <ng-container matColumnDef="reference">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Reference </th>
-          <td mat-cell *matCellDef="let element" [ngClass]="getRowClass(element)" > {{element.reference}} </td>
-        </ng-container>
+        <table #returnBoxSort="matSort" [dataSource]="returnBoxDataSource" class="mat-elevation-z8" mat-table matSort>
+          <ng-container matColumnDef="reference">
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> Reference </th>
+            <td *matCellDef="let element" mat-cell> {{element.reference}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="bookID">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Book </th>
-          <td mat-cell *matCellDef="let element" [ngClass]="getRowClass(element)" > {{element.book.name}} [ID:{{element.book.bookID}}] </td>
-        </ng-container>
+          <ng-container matColumnDef="bookID">
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> Book </th>
+            <td *matCellDef="let element" mat-cell> {{element.book.name}} [ID:{{element.book.bookID}}] </td>
+          </ng-container>
 
-        <ng-container matColumnDef="lendingTime" >
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> BorrowTime </th>
-          <td mat-cell *matCellDef="let element" [ngClass]="getRowClass(element)" > {{element.lendingTime}} </td>
-        </ng-container>
+          <ng-container matColumnDef="returnStatus">
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> Status </th>
+            <td *matCellDef="let element" mat-cell> {{element.returnStatus}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="limitTime">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> LimitTime </th>
-          <td mat-cell *matCellDef="let element" [ngClass]="getRowClass(element)" > {{element.limitTime}} </td>
-        </ng-container>
+          <ng-container matColumnDef="telephone">
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> User </th>
+            <td *matCellDef="let element" mat-cell> {{element.user.telephone}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="telephone">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> User </th>
-          <td mat-cell *matCellDef="let element" [ngClass]="getRowClass(element)" > {{element.user.telephone}} </td>
-        </ng-container>
+          <ng-container matColumnDef="isReturn">
+            <th *matHeaderCellDef mat-header-cell> Status of return </th>
+            <td *matCellDef="let element" mat-cell>
+              <button (click)="openFeedbackPage(element.reference)" *ngIf="element.returnStatus=='WAITING_FOR_VERIFICATION'" mat-icon-button><mat-icon>check</mat-icon></button>
+              <button (click)="bookNoReturn(element.reference)" *ngIf="element.returnStatus=='WAITING_FOR_VERIFICATION'" mat-icon-button><mat-icon>close</mat-icon></button>
+            </td>
+          </ng-container>
 
-        <ng-container matColumnDef="return">
-          <th mat-header-cell *matHeaderCellDef> Return </th>
-          <td mat-cell *matCellDef="let element"> <button mat-flat-button *ngIf="!element.status" (click)="return(element)">Return </button></td>
-        </ng-container>
+          <ng-container matColumnDef="view">
+            <th *matHeaderCellDef mat-header-cell> View </th>
+            <td *matCellDef="let element" mat-cell> <button (click)="openReturnPage(element.reference)" mat-icon-button><mat-icon> visibility</mat-icon> </button>
+            </td>
+          </ng-container>
+          <tr *matHeaderRowDef=" returnBoxLow " mat-header-row></tr>
+          <tr *matRowDef="let row; columns: returnBoxLow;" mat-row></tr>
+        </table>
+        <mat-paginator #returnBoxPaginator [pageSizeOptions]="[5, 10, 25, 50]"></mat-paginator>
+      </mat-tab>
 
-        <ng-container matColumnDef="view">
-          <th mat-header-cell *matHeaderCellDef> View </th>
-          <td mat-cell *matCellDef="let element"> <button mat-icon-button (click)="openBorrowPage(element.reference)"><mat-icon> visibility</mat-icon> </button></td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef=" low "></tr>
-        <tr mat-row *matRowDef="let row; columns: low;"></tr>
-      </table>
-      <mat-paginator #lendingPaginator [pageSizeOptions]="[5, 10, 25, 50]" ></mat-paginator>
-    </mat-tab>
-  </mat-tab-group>
+      <mat-tab label="Book Borrow Order List">
+        <mat-card-title>
+          <h1 class="title">Lending list</h1>
+          <button (click)="getAllBorrowData();all=false" mat-flat-button>Refresh</button>
+        </mat-card-title>
+        <mat-form-field class="example-full-width">
+          <mat-label>Search</mat-label>
+          <input (keyup)="applyLendingFilter($event)" matInput placeholder="bookName,bookID,telephone,reference,time">
+        </mat-form-field>
+        <br>
+        <button (click)="applyLendingAllOrNoReturnFilter('false'); all=true" *ngIf="!all" mat-flat-button>Only Show no Return</button>
+        <button (click)="getAllBorrowData(); all=false" *ngIf="all" mat-flat-button>Show All</button>
+        <button (click)="readUserByExtensionBeyond30Days(); all=true" *ngIf="user.isAdmin(userData)" mat-flat-button>Show Beyond 30 Days no Return</button>
+        <button (click)="sendReminderEmail('send_email_to_user_by_approaching_date'); all=true" *ngIf="user.isAdmin(userData)" mat-flat-button>Send reminder email</button>
+        <button (click)="sendReminderEmail('send_email_to_user_by_order_overdue'); all=true" *ngIf="user.isAdmin(userData)" mat-flat-button>Send order overdue email</button>
+        <button (click)="sendReminderEmail('ban_user_by_overdue_max_30day'); all=true" *ngIf="user.isAdmin(userData)" mat-flat-button>Send order beyond 30 Days no Return email</button>
 
-</mat-card>
+        <table #lendingSort="matSort" [dataSource]="lendingDataSource" class="table-unreturned" mat-table
+               matSort>
+          <ng-container matColumnDef="reference">
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> Reference </th>
+            <td *matCellDef="let element" [ngClass]="getRowClass(element)" mat-cell> {{element.reference}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="bookID">
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> Book </th>
+            <td *matCellDef="let element" [ngClass]="getRowClass(element)" mat-cell> {{element.book.name}}[ID:{{element.book.bookID}}] </td>
+          </ng-container>
+
+          <ng-container matColumnDef="lendingTime">
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> BorrowTime </th>
+            <td *matCellDef="let element" [ngClass]="getRowClass(element)" mat-cell> {{element.lendingTime}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="limitTime">
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> LimitTime </th>
+            <td *matCellDef="let element" [ngClass]="getRowClass(element)" mat-cell> {{element.limitTime}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="telephone">
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> User </th>
+            <td *matCellDef="let element" [ngClass]="getRowClass(element)" mat-cell>{{element.user.telephone}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="return">
+            <th *matHeaderCellDef mat-header-cell> Return </th>
+            <td *matCellDef="let element" mat-cell> <button (click)="return(element)" *ngIf="!element.status" mat-flat-button>Return </button></td>
+          </ng-container>
+
+          <ng-container matColumnDef="view">
+            <th *matHeaderCellDef mat-header-cell> View </th>
+            <td *matCellDef="let element" mat-cell> <button (click)="openBorrowPage(element.reference)" mat-icon-button><mat-icon> visibility</mat-icon> </button></td>
+          </ng-container>
+          <tr *matHeaderRowDef=" low " mat-header-row></tr>
+          <tr *matRowDef="let row; columns: low;" mat-row></tr>
+        </table>
+        <mat-paginator #lendingPaginator [pageSizeOptions]="[5, 10, 25, 50]"></mat-paginator>
+      </mat-tab>
+
+      <mat-tab label="Book Return Order List">
+        <mat-card-title>
+          <h1 class="title">Returned list</h1> <button (click)="getAllBorrowData()" mat-flat-button>Refresh</button>
+        </mat-card-title>
+        <mat-form-field class="example-full-width">
+          <mat-label>Search</mat-label>
+          <input (keyup)="applyRestitutionFilter($event)" matInput placeholder="bookName,bookID,telephone,reference,time,status">
+        </mat-form-field>
+        <table #restitutionSort="matSort" [dataSource]="restitutionDataSource" class="mat-elevation-z8" mat-table matSort>
+          <ng-container matColumnDef="reference">
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> Reference </th>
+            <td *matCellDef="let element" [class]="{'red-text':isOverdue(element.limitTime,element.restitutionTime)}" mat-cell>{{element.reference}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="bookID">
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> Book </th>
+            <td *matCellDef="let element" [class]="{'red-text':isOverdue(element.limitTime,element.restitutionTime)}" mat-cell>{{element.book.name}} [ID:{{element.book.bookID}}] </td>
+          </ng-container>
+
+          <ng-container matColumnDef="returnStatus">
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> ReturnStatus </th>
+            <td *matCellDef="let element" [class]="{'red-text':isOverdue(element.limitTime,element.restitutionTime)}" mat-cell>{{element.returnStatus}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="status">
+            <th *matHeaderCellDef mat-header-cell> Status of return </th>
+            <td *matCellDef="let element" [class]="{'red-text':isOverdue(element.limitTime,element.restitutionTime)}" mat-cell>{{status2(element.limitTime,element.restitutionTime)}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="telephone">
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> User </th>
+            <td *matCellDef="let element" [class]="{'red-text':isOverdue(element.limitTime,element.restitutionTime)}" mat-cell>{{element.user.telephone}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="view">
+            <th *matHeaderCellDef mat-header-cell> View </th>
+            <td *matCellDef="let element" mat-cell> <button (click)="openReturnPage(element.reference)" mat-icon-button><mat-icon> visibility</mat-icon> </button></td>
+          </ng-container>
+          <tr *matHeaderRowDef=" returnLow " mat-header-row></tr>
+          <tr *matRowDef="let row; columns: returnLow;" mat-row></tr>
+        </table>
+        <mat-paginator #restitutionPaginator [pageSizeOptions]="[5, 10, 25, 50]"></mat-paginator>
+      </mat-tab>
+
+    </mat-tab-group>
+  </mat-card>
 </main>
