--- a/biblioteca/src/app/home/personal-page/recharge/recharge.component.html
+++ b/biblioteca/src/app/home/personal-page/recharge/recharge.component.html
@@ -5,11 +5,10 @@
     <p>Balance: {{balance}} €</p>
   </mat-card-title>
   <mat-card-content>
-<mat-form-field >
-  <mat-label>Sum of money</mat-label>
-  <input matInput type="number" min="0" [(ngModel)]="sumOfMoney">
-</mat-form-field>
-    <br>
+    <mat-form-field class="input-sum">
+      <mat-label>Sum of money</mat-label>
+      <input matInput type="number" min="0" [(ngModel)]="sumOfMoney">
+    </mat-form-field>
     <mat-form-field class="payType">
       <mat-label>Please select a payment method</mat-label>
       <mat-select disableRipple [(ngModel)]="card">
@@ -18,23 +17,23 @@
         <mat-option value="UNION PAY">UNION PAY</mat-option>
       </mat-select>
     </mat-form-field>
-    <br>
-<mat-form-field class="cardNumber">
-  <mat-label>Card number</mat-label>
-  <input matInput type="text" maxlength="19" appCardNumber placeholder="0000 0000 0000 0000" [(ngModel)]="cardNumber">
-</mat-form-field>
-    <br>
-<mat-form-field class="date">
-  <mat-label>Expiration Date</mat-label>
-  <input matInput type="text" appExpirationDate maxlength="5" placeholder="MM/YY" [(ngModel)]="expirationDate">
-</mat-form-field>
+    <mat-form-field class="cardNumber">
+      <mat-label>Card number</mat-label>
+      <input matInput type="text" maxlength="19" appCardNumber placeholder="0000 0000 0000 0000"
+             [(ngModel)]="cardNumber">
+    </mat-form-field>
 
-<mat-form-field class="cvv">
-  <mat-label>CVV</mat-label>
-  <input matInput type="password" maxlength="3" [(ngModel)]="cvv">
-</mat-form-field>
+    <mat-form-field class="date">
+      <mat-label>Expiration Date</mat-label>
+      <input matInput type="text" appExpirationDate maxlength="5" placeholder="MM/YY"
+             [(ngModel)]="expirationDate">
+    </mat-form-field>
 
-    <br>
+    <mat-form-field class="cvv">
+      <mat-label>CVV</mat-label>
+      <input matInput type="password" maxlength="3" [(ngModel)]="cvv">
+    </mat-form-field>
+
     <mat-form-field class="date">
       <mat-label>First Name</mat-label>
       <input matInput [(ngModel)]="transactionDetails.firstName">
@@ -43,25 +42,24 @@
       <mat-label>Last Name</mat-label>
       <input matInput [(ngModel)]="transactionDetails.lastName">
     </mat-form-field>
-    <br>
+
     <mat-form-field class="date">
       <mat-label>City</mat-label>
       <input matInput [(ngModel)]="transactionDetails.city">
     </mat-form-field>
     <mat-form-field class="cvv">
-    <mat-label>Postal Code</mat-label>
-    <input matInput maxlength="5" [(ngModel)]="transactionDetails.postalCode">
-  </mat-form-field>
-    <br>
+      <mat-label>Postal Code</mat-label>
+      <input matInput maxlength="5" [(ngModel)]="transactionDetails.postalCode">
+    </mat-form-field>
+
     <mat-form-field class="cardNumber">
       <mat-label>Billing Address</mat-label>
       <input matInput [(ngModel)]="transactionDetails.billingAddress">
     </mat-form-field>
     <mat-spinner *ngIf="spinner" class="spinner"></mat-spinner>
-    <br>
+
     <button mat-flat-button [disabled]="rechargeBtn" (click)="recharge()">Recharge</button>
-    <button mat-flat-button  mat-dialog-close>Close</button>
+    <button mat-flat-button mat-dialog-close>Close</button>
   </mat-card-content>
 
 </mat-card>
-
