--- a/biblioteca/src/app/home/personal-page/withdraw-money/withdraw-money.component.html
+++ b/biblioteca/src/app/home/personal-page/withdraw-money/withdraw-money.component.html
@@ -5,11 +5,10 @@
     <p>Balance: {{balance}} €</p>
   </mat-card-title>
   <mat-card-content>
-<mat-form-field >
-  <mat-label>Sum of money</mat-label>
-  <input matInput type="number" [max]="balance" [(ngModel)]="sumOfMoney">
-</mat-form-field>
-    <br>
+    <mat-form-field class="input-sum">
+      <mat-label>Sum of money</mat-label>
+      <input matInput type="number" [max]="balance" [(ngModel)]="sumOfMoney">
+    </mat-form-field>
     <mat-form-field class="payType">
       <mat-label>Please select card type</mat-label>
       <mat-select disableRipple [(ngModel)]="card">
@@ -18,13 +17,13 @@
         <mat-option value="UNION PAY">UNION PAY</mat-option>
       </mat-select>
     </mat-form-field>
-    <br>
-<mat-form-field class="cardNumber">
-  <mat-label>Card number</mat-label>
-  <input matInput type="text" maxlength="19" appCardNumber placeholder="0000 0000 0000 0000" [(ngModel)]="cardNumber">
-</mat-form-field>
-    <br>
-    <br>
+
+    <mat-form-field class="cardNumber">
+      <mat-label>Card number</mat-label>
+      <input matInput type="text" maxlength="19" appCardNumber placeholder="0000 0000 0000 0000"
+             [(ngModel)]="cardNumber">
+    </mat-form-field>
+
     <mat-form-field class="date">
       <mat-label>First Name</mat-label>
       <input matInput [(ngModel)]="transactionDetails.firstName">
@@ -33,16 +32,15 @@
       <mat-label>Last Name</mat-label>
       <input matInput [(ngModel)]="transactionDetails.lastName">
     </mat-form-field>
-    <br>
+
     <mat-form-field class="date">
       <mat-label>City</mat-label>
       <input matInput [(ngModel)]="transactionDetails.city">
     </mat-form-field>
     <mat-form-field class="cvv">
-    <mat-label>Postal Code</mat-label>
-    <input matInput maxlength="5" [(ngModel)]="transactionDetails.postalCode">
-  </mat-form-field>
-    <br>
+      <mat-label>Postal Code</mat-label>
+      <input matInput maxlength="5" [(ngModel)]="transactionDetails.postalCode">
+    </mat-form-field>
     <mat-form-field class="cardNumber">
       <mat-label>Billing Address</mat-label>
       <input matInput [(ngModel)]="transactionDetails.billingAddress">
@@ -50,10 +48,8 @@
 
     <mat-spinner *ngIf="spinner" class="spinner"></mat-spinner>
 
-    <br>
     <button mat-flat-button [disabled]="WithdrawMoneyBtn" (click)="withdrawMoney()">Confirm</button>
-    <button mat-flat-button  mat-dialog-close>Close</button>
+    <button mat-flat-button mat-dialog-close>Close</button>
   </mat-card-content>
 
 </mat-card>
-
